fix: change integration tests errors and configure consumer acs listener method